--- a/pj/site/client/pages/titulos/titulos.css
+++ b/pj/site/client/pages/titulos/titulos.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: #bbbbbb;
+    gap: 750px;
 }
 
 .divTitulo{
@@ -25,6 +25,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px solid #1d4f2b;
+    background-color: #d7f5df;
+    position: relative;
 }
 
 .divTexto{
@@ -66,5 +69,7 @@ label{
     font-family: Arial, Helvetica, sans-serif;
     padding: 5px;
     border-radius: 5px;
+    background-color: white;
+    color: #1d4f2b;
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
 }
