--- a/pj/site/client/pages/style.css
+++ b/pj/site/client/pages/style.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: start;
 }
-/*CSS DO MENU*/
+/*CSS DO MENU HORIZONTAL*/
 nav{
     background-color: #1D4F2B;
     display: flex;
@@ -87,4 +87,120 @@ nav .aPalmeiras{
 }
 .btnVerde a{
     color: #1D4F2B;
+}
+
+/*CONFIGURAÇÂO DOS ALERTAS*/
+.divMenssagem {
+    color: white;
+    flex: 1;
+    padding: 0 2rem;
+}
+.divFecha {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    margin-right: 30px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+.divFecha:hover {
+    background: rgba(0, 0, 0, 0.12);
+}
+.banner {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    font-weight: 700;
+}
+.bannerVermelho{
+    background: #ed1c24;
+}
+.bannerVerde{
+    background: #1ced73;
+}
+.banner::after {
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    bottom: 100%;
+    left: 0;
+}
+.bannerVermelho::after{
+    content: "";
+    background: #ed1c24;
+}
+.bannerVerde::after{
+    content: "";
+    background: #1ced73;
+}
+.banner:not(.visible) {
+    display: none;
+    transform: translateY(-100%);
+}
+.visible {
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.12);
+    animation-name: banner-in;
+    animation-direction: forwards;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+@keyframes banner-in {
+    0% {
+        transform: translateY(-100%);
+    }
+    50% {
+        transform: translateY(10%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+/*CSS DO MENU LATERAL (QND ESTA LOGADO)*/
+.sidebar {
+    background-color: #1D4F2B;
+    color: #fff;
+    width: 20%;
+    padding: 20px;
+    height: 96vh;
+    transition: transform 0.3s ease;
+}
+.sidebar ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+.sidebar ul li {
+    margin-bottom: 10px;
+}
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+.hide {
+    transform: translateX(-165px);
+}
+.btnUm{
+    background-color: #1D4F2B;
+    border: none;
+    width: 50px;
+    height: 50px;
+}
+.sidebar .bi{
+    color: white;
+    font-size: 30px;
 }
