--- a/pj/site/client/pages/qmSou/qmSou.css
+++ b/pj/site/client/pages/qmSou/qmSou.css
@@ -4,7 +4,6 @@
     justify-content: start;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
     padding-top: 50px;
 }
 .divTitulo{
@@ -30,3 +29,94 @@
     height: 5px;
 }
 
+.divHorizontal{
+    margin-top: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin-bottom: 20px;
+}
+
+.divCaixa{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45%;
+    flex-direction: column;
+    overflow: hidden;
+    gap: 20px;
+    height: 310px;
+    font-size: 18px;
+}
+.divImg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45%;
+    flex-direction: column;
+    overflow: hidden;
+    gap: 20px;
+    height: 300px;
+}
+.divCaixa label{
+    width: 100%;
+    background-color: #215F32;
+    color: white;
+    font-size: 35px;
+    padding: 10px;
+    position: relative;
+}
+.divCaixa label::after{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 30px;
+    top: 0;
+    left: 0;
+    background-color: #3DA159;
+}
+.divTextos{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.divValores{
+    margin-top: 30px;
+    width: 100%;
+    height: 400px;
+    background-color: #215F32;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+.divValores h1{
+    text-align: center;
+    color: white;
+    position: relative;
+}
+.divValores h1::after{
+    position: absolute;
+    top:38px;
+    left: -12px;
+    content: '';
+    width: 120%;
+    border-radius: 50px;
+    background-color: white;
+    height: 5px;
+}
+.divImgValores{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 200px;
+    width: 80%;
+}
+.divImgValores img{
+    width: 180px;
+}
