Pag de jogador favorito pronta

--- a/pj/site/client/pages/style.css
+++ b/pj/site/client/pages/style.css
@@ -186,6 +186,7 @@ nav .aPalmeiras{
 }
 .sidebar ul li {
     margin-bottom: 10px;
+    position: relative;
 }
 .sidebar ul li a {
     color: #fff;
