--- a/pj/site/client/pages/quiz/quiz2.css
+++ b/pj/site/client/pages/quiz/quiz2.css
@@ -119,3 +119,59 @@
     border-radius: 5px;
     font-size: 25px;
 }
+.divMenu{
+    text-align: center;
+    width: 70%;
+    height: 135px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #15291A;
+    z-index: 1;
+}
+.button{
+    position:relative;
+    display:inline-block;
+    background: none;
+    border: none;
+  }
+  
+  .button a{
+    color:white;
+    font-family:Helvetica, sans-serif;
+    font-weight:bold;
+    font-size:15px;
+    text-align: center;
+    text-decoration:none;
+    background-color:#1d5e31;
+    display:block;
+    position:relative;
+    padding:10px 20px;
+    text-shadow: 0px 1px 0px #000;
+    box-shadow:inset 0 1px 0 #cff8c2, 0 10px 0 #03340a;
+    border-radius: 5px;
+  }
+  
+  .button a:active{
+    top:5px;
+    background-color:#03340a;
+    box-shadow:inset 0 1px 0 #d3ffc4, inset 0 -3px 0 #03340a;
+  }
+  
+  .button:after{
+    content:"";
+    height:100%;
+    width:100%;
+    padding:4px;
+    position: absolute;
+    bottom:-15px;
+    left:-4px;
+    z-index:-1;
+    background-color: black;
+    border-radius: 5px;
+  }
+  #divBranco{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+  }
